# jupyter-xarray-tiler

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  test.ipynb
.github/workflows/: build.yml  check-links.yml  check-release.yml  enforce-label.yml  pr-rtd-link.yml  publish.yml  typecheck.yml
docs/: Makefile  conf.py  index.md
docs/contributor-guide/: index.md
docs/contributor-guide/how-tos/: check-style-and-quality.md  develop.md  development-install.md  index.md  release.md  testing.md
docs/user-guide/: backends.md  index.md  install.md  quickstart.md
docs/user-guide/about/: backends.md  index.md
docs/user-guide/reference/: api.md  index.md
docs/user-guide/reference/api/: titiler.md  xpublish.md
examples/: Grand_Canyon_DEM.ipynb  global_bathymetry.ipynb  leafmap-big-dataset.ipynb  leafmap-ndvi.ipynb  titiler-mockdata-leafmap.ipynb  titiler-smalldata-leafmap.ipynb  xpublish-mockdata-leafmap.ipynb  xpublish-smalldata-leafmap.ipynb
jupyter-config/server-config/: jupyter_server_titiler.json
jupyter_server_titiler/: __init__.py  api.py  handlers.py  routes.py  titiler.py
jupyter_server_titiler/tests/: __init__.py  test_handlers.py  test_routes.py  test_titiler_server.py
jupyter_xarray_tiler/: __init__.py  _base_server.py
jupyter_xarray_tiler/constants/: _jupyter.py
jupyter_xarray_tiler/tests/: exceptions.py  helpers.py  params.py  test_titiler_api.py  test_titiler_server.py  test_xpublish_api.py  test_xpublish_server.py
jupyter_xarray_tiler/tests/fixtures/: api.py  data.py  jupyter_server.py  server.py
jupyter_xarray_tiler/titiler/: __init__.py  _server.py  _singleton.py
jupyter_xarray_tiler/xpublish/: __init__.py  _server.py
src/: handler.ts  index.ts
src/__tests__/: jupyter_server_titiler.spec.ts
ui-tests/: jupyter_server_test_config.py  package.json
ui-tests/tests/: jupyter_server_titiler.spec.ts
