[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyter_server_titiler"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]
dependencies = [
    "jupyter_server>=2.4.0,<3",
    "titiler",
    "anyio",
    "anycorn",
    "rioxarray",
    "geopandas",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "mypy>=1.19.1",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0",
]
play = [
    "leafmap",
    "odc-stac",
    "pystac-client",
    "dask",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_server_titiler/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_server_titiler/labextension" = "share/jupyter/labextensions/jupyter-server-titiler"
"install.json" = "share/jupyter/labextensions/jupyter-server-titiler/install.json"
"_jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupyter_server_titiler/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_server_titiler/labextension/static/style.js",
    "jupyter_server_titiler/labextension/package.json",
]
skip-if-exists = ["jupyter_server_titiler/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_server_titiler/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.mypy]
packages = ["jupyter_server_titiler"]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rioxarray.*",
    "anycorn.*",
    "rio_tiler.*",
    "titiler.*",
    "geopandas.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",  # Require type annotation for *args
  "ANN003",  # Require type annotation for **kwargs
  "D",       # Require docstrings (TODO: Enable)
  "EM101",   # Forbit litereal strings in exception messages
  "EM102",   # Forbid f-strings in exception messages
  "FIX",     # FIXME, TODO, etc. comments
  "G004",    # Forbid f-strings in log messages
  "INP",     # Forbid implicit namespace packages
  "TD",      # Require standards for TODO comments
  "TRY003",  # Forbid "long" exception messages
]

[tool.ruff.lint.per-file-ignores]
"{conftest.py,**/tests/**/*.py}" = [
  "ANN001",  # Require type annotations for args (e.g. test fixtures)
  "ANN201",  # Require type annotation for return
  "ARG001",  # Forbid unused function arguments (e.g. test fixtures)
  "S101",    # Forbid assertion statements
]
