[build-system]
requires = ["hatchling>=1.5.0", "hatch-vcs", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "jupyter-xarray-tiler"
description = "A Jupyter server extension providing a TiTiler server, proxy, and a Python API to add Xarray datasets to the TiTiler server."
authors = [
    {name = "GeoJupyter community", email = "geojupyter@gmail.com"},
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "jupyter",
    "jupyterlab",
    "jupyterlab-extension",
]
dynamic = ["version"]
dependencies = [
    "jupyter_server>=2.4.0,<3",
    "jupyter-server-proxy",
    "titiler",
    "anyio",
    "anycorn",
    "rioxarray",
    "geopandas",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/geojupyter/jupyter-xarray-tiler.git"
Homepage = "https://github.com/geojupyter/jupyter-xarray-tiler"
Issues = "https://github.com/geojupyter/jupyter-xarray-tiler/issues"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "mypy>=1.19.1",
]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0",
]
docs = [
    "myst-parser>=5.0.0",
    "pydata-sphinx-theme==0.16.0",  # See: https://github.com/pydata/pydata-sphinx-theme/issues/2090
    "sphinx>=8.2.3,<9",  # sphinx-tabs not compatible with Sphinx 9
    "sphinx-tabs>=3.4.7",
]
play = [
    "leafmap",
    "odc-stac",
    "pystac-client",
    "dask",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [".github"]

[tool.hatch.build.targets.wheel.shared-data]
"_jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupyter_xarray_tiler/_version.py"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.mypy]
packages = ["jupyter_xarray_tiler"]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "rioxarray.*",
    "anycorn.*",
    "rio_tiler.*",
    "titiler.*",
    "geopandas.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",  # Require type annotation for *args
  "ANN003",  # Require type annotation for **kwargs
  "D",       # Require docstrings (TODO: Enable)
  "EM101",   # Forbit litereal strings in exception messages
  "EM102",   # Forbid f-strings in exception messages
  "FIX",     # FIXME, TODO, etc. comments
  "G004",    # Forbid f-strings in log messages
  "INP",     # Forbid implicit namespace packages
  "TD",      # Require standards for TODO comments
  "TRY003",  # Forbid "long" exception messages
]

[tool.ruff.lint.per-file-ignores]
"{conftest.py,**/tests/**/*.py}" = [
  "ANN001",  # Require type annotations for args (e.g. test fixtures)
  "ANN201",  # Require type annotation for return
  "ARG001",  # Forbid unused function arguments (e.g. test fixtures)
  "S101",    # Forbid assertion statements
  "SLF001",  # Forbid private member access
]
"*.ipynb" = [
    "T201",  # Forbid print calls
]
